--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,5 +9,6 @@
   <h1>Informações do Servidor</h1>
   <p>Endereço IP do Servidor: <%= ip %></p>
   <p>Hora Atual do Servidor: <%= horaAtual %></p>
+  <h1> HTML ALTERADO </h1>
 </body>
 </html>
